<resources>
    <string name="app_name">BrSystemControl</string>

    <string name="Enable_left_handed_control">Enable left handed control</string>
    <string name="Enable_floating_control">Enable floating control</string>
    <string name="Enable_launcher_widget">Enable launcher widget</string>
    <string name="Enable_notifications_control">Enable notifications control</string>
    <string name="Enable_pip_control">Enable PIP control</string>

    <string name="BR_control">BR control</string>
    <string name="Remote_control_from_BR_system">Remote control for BR system</string>
    <string name="Remote_control_notification_channel">Remote control notification channel</string>

    <!-- Text for remote control buttons -->
    <string name="_button_text_60">"  60"</string>
    <string name="_button_text_20">"  20"</string>
    <string name="_button_text_stop">Stop</string>

</resources>
