<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Game details"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/games_action1_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/base_margin"
        android:layout_marginBottom="@dimen/base_margin"
        android:text="@string/_button_text_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/games_action2_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/games_action2_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_button_text_60"
        app:layout_constraintBottom_toBottomOf="@+id/games_action1_btn"
        app:layout_constraintEnd_toStartOf="@+id/games_action3_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/games_action1_btn" />

    <Button
        android:id="@+id/games_action3_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/base_margin"
        android:text="@string/_button_text_stop"
        app:layout_constraintBottom_toBottomOf="@+id/games_action2_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/games_action2_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>